Fix somes issues

--- a/oop/src/main/java/fr/gboissinot/al/tps/oop/tp5/README
+++ b/oop/src/main/java/fr/gboissinot/al/tps/oop/tp5/README
@@ -1,6 +1,5 @@
 ## Description
-- ServiceLocation implementation examples
+- Factory illustration with a file logger
 
 ## Notes
-- ServiceLocator use a key as identifier
-- ServiceLocatorSingleton is not finalized
+
