--- a/oop/src/main/java/fr/gboissinot/al/tps/oop/tp17/README
+++ b/oop/src/main/java/fr/gboissinot/al/tps/oop/tp17/README
@@ -4,6 +4,6 @@
 ## Notes
 - Position is a ValueObject
 - Player has a state position and it is exposed through the currentPosition() method
-- Testing the player object has two main techniques
+- Testing the player object has drawbacks
     - using the currentPosition() method
     - wrapping the Position object by creating a new current Player object
