--- a/oop/src/main/java/fr/gboissinot/al/tps/oop/tp7/README
+++ b/oop/src/main/java/fr/gboissinot/al/tps/oop/tp7/README
@@ -1,5 +1,5 @@
 ## Description
-- First invariant illustration
+- Invariants illustration
 
 ## Notes
 - Invariants are checked at the creation in the constructor
