--- a/oop/src/main/java/fr/gboissinot/al/tps/oop/tp2/README
+++ b/oop/src/main/java/fr/gboissinot/al/tps/oop/tp2/README
@@ -3,6 +3,6 @@
 
 ## Notes
 - MyService is a service object with a logger as a dependency
-- ServiceLocator pattern enable to locate objects : it has been deprecated by dependency injection
+- ServiceLocator pattern enables to locate objects : it has been deprecated by dependency injection
 - A Logger endpoint with multiple implementations : NullLogger, DefaultLogger, MySecondLogger
 - NullLogger is called a dummy object
