--- a/oop/src/main/java/fr/gboissinot/al/tps/oop/tp6/README
+++ b/oop/src/main/java/fr/gboissinot/al/tps/oop/tp6/README
@@ -2,6 +2,6 @@
 - DIP and DI illustration with the repository pattern
 
 ## Notes
-- A Service object uses a registry object through an abstraction (DIP)
+- A Service object uses a registry object through an abstraction (DIP pattern)
 - The repository interface has several implementations : InMemory, Stub, Oracle
-- The chosen implementation is injected (DI) at the wiring step in the Main
+- The chosen implementation is injected (DI) at the wiring step in the Main class
