--- a/oop/src/main/java/fr/gboissinot/al/tps/oop/tp11/README
+++ b/oop/src/main/java/fr/gboissinot/al/tps/oop/tp11/README
@@ -3,7 +3,7 @@
 
 ## Notes
 - Colis is an entity with its unique identifier
-- Colis has the change status property
+- Colis has a change status property
 - Colis equality is done on its unique identifier
 - ColisStatus can be considered as a Value Object
 - ColisId is a Value Object ID
